<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_create"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_ideas"
            android:icon="@drawable/ic_menu_ideas"
            android:title="@string/menu_ideas" />
        <item
            android:id="@+id/nav_socks"
            android:icon="@drawable/ic_menu_socks"
            android:title="@string/menu_socks" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>