<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="327dp"
            android:layout_height="109dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/Logocreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_logo" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="162dp"
            android:text="@string/btn_home_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/buttonIdeas"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="162dp"
            android:text="@string/btn_home_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreate" />

        <Button
            android:id="@+id/buttonSocks"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="162dp"
            android:text="@string/btn_home_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonIdeas" />


        <Button
            android:id="@+id/buttonAboutUs"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_home_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSocks"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="162dp"
            android:text="@string/btn_home_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAboutUs"
            app:layout_constraintVertical_bias="0.012" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>