<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.help.HelpFragment">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="232dp"
            android:text="@string/setting_1"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting_2"
            android:textColor="?attr/colorOnBackground"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />

        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/btn_setting_1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/btn_setting_2"
                android:textSize="18sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>