<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.create.CreateFragment2">

        <SeekBar
            android:id="@+id/seekBar4"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:max="4"
            android:progress="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="355dp"
            android:layout_height="68dp"
            android:gravity="center"
            android:text="@string/sock_color_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar4"
            tools:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="413dp"
            android:layout_height="238dp"
            android:contentDescription="@string/size_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@mipmap/colors" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="412dp"
            android:layout_height="201dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sock_main_color_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:text="@string/sock_second_color_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCreate4"
                android:layout_width="137dp"
                android:layout_height="48dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="160dp"
                android:text="@string/create_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.422"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                app:icon="@drawable/ic_paint"
                app:iconSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button11"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                app:icon="@drawable/ic_paint"
                app:iconSize="30dp"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>